--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "opentable-res-service",
+  "name": "opentable-review-service",
   "version": "1.0.0",
-  "description": "Reservation and Googlemap module",
-  "author": "Jeff Whittington",
+  "description": "Review module",
+  "author": "FEC1 team",
   "license": "ISC",
   "scripts": {
     "start": "nodemon server/index.js",
@@ -15,12 +15,10 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "google-maps-react": "^2.0.2",
     "lodash": "^4.17.15",
     "mongoose": "^5.7.13",
-    "react": "15.5.0",
-    "react-datepicker": "2.9.3",
-    "react-dom": "15.5.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "styled-components": "^3.0.0"
   },
   "devDependencies": {
